--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,10 @@ Imports: stringr,
     ade4,
     parallel,
     pbapply,
-    raster
+    raster,
+    ggplot2,
+    gridExtra,
+    grid
 Suggests: testthat,
     knitr, 
     rmarkdown,
