--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,12 @@ export(createRegions)
 export(lassoAbund_comm)
 export(lassoBinomial)
 export(lassoBinomial_comm)
+export(lassoBinomial_metrics)
 export(lassoGaussian)
 export(meanPRISM)
 export(plotBinomial)
+export(plotGaussian)
+export(predictlassoBinomial)
 export(prepDendrograms)
 export(processPRISM)
 export(validateSpecies)
