--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(lassoBinomial_comm)
 export(lassoBinomial_metrics)
 export(lassoGaussian)
 export(meanPRISM)
+export(networkBetaOS)
 export(plotBinomial)
 export(plotGaussian)
 export(predictlassoBinomial)
