hurdle and network model functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(cleanStormData)
 export(createRegions)
+export(hurdleModel)
 export(lassoAbund_comm)
 export(lassoBinomial)
 export(lassoBinomial_comm)
@@ -9,6 +10,7 @@ export(lassoBinomial_metrics)
 export(lassoGaussian)
 export(meanPRISM)
 export(networkBetaOS)
+export(networkModel)
 export(plotBinomial)
 export(plotGaussian)
 export(predictlassoBinomial)
