--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(plotBinomial)
 export(plotGaussian)
 export(predictlassoBinomial)
 export(prepDendrograms)
+export(processAltitudes)
+export(processNDVI)
 export(processPRISM)
 export(validateSpecies)
 importFrom(magrittr,"%>%")
